fixed overflow:overlay to remove horizontal scroll

--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 * {
     box-sizing: border-box;
-    /* overflow: hidden; */
 }
 
 :root {
@@ -20,6 +19,7 @@ html {
 body {
     margin: 0;
     height: 100%;
+    overflow: overlay;
 }
 
 @font-face {
@@ -188,10 +188,14 @@ main h1{
 /* For Mobile */
 
 @media screen and (max-width: 1100px) {
+    * {
+        box-sizing: border-box;
+    }
     body {
         width: 100vw;
     }
     .page-container {
+        display: flex;
         flex-direction: column;
         width: 100vw;
         height: auto;
@@ -395,7 +399,7 @@ main h1{
     .project-card {
         display: flex;
         height: auto;
-        width: 90%;
+        width: 80%;
         background-color: var(--darkBlueAccent);
         flex-wrap: wrap;
         margin: 5px;
